# scout-sim

scout/: README.md  scout_mini.urdf
scout/cartographer/config/: scout_mini_3d.lua
scout/cartographer/launch/: cartographer_launch.py
scout/scout_control/: CMakeLists.txt  package.xml
scout/scout_description/: CMakeLists.txt  model.config  package.xml
scout/scout_description/launch/: display_mini_models.launch.py  display_scout_mini.launch.py  display_scout_v2.launch.py  gazebo.launch.py  scout_mini_stock.launch.py  scout_v2_stock.launch.py
scout/scout_description/rviz/: model_display.rviz
scout/scout_description/urdf/: lidar_sensor.xacro  scout_mini.gazebo  scout_mini.sdf  scout_mini.xacro  scout_mini_wheel_1.xacro  scout_mini_wheel_2.xacro  scout_mini_wheel_3.xacro  scout_mini_wheel_4.xacro  scout_v2.gazebo
scout/scout_gazebo_sim/: CMakeLists.txt  package.xml
scout/scout_gazebo_sim/config/: scout_v2_control.yaml
scout/scout_gazebo_sim/include/scout_gazebo/: scout_skid_steer.hpp
scout/scout_gazebo_sim/launch/: scout_empty_world.launch.py  scout_mini_empty_world.launch.py  scout_mini_playpen.launch.py  spawn_scout_mini.launch.py
scout/scout_gazebo_sim/src/: scout_skid_steer.cpp  scout_skid_steer_controller.cpp
scout/scout_gazebo_sim/worlds/: clearpath_playpen.world
